examples/test/testpolicy7066.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7066
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key23: value10
      key11: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value0
          key41: value9
      podSelector:
        matchLabels:
          key10: value25
          key26: value31
          key29: value5
